# DuckLauncher

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  coordinator.py  init.sql.example  pyproject.toml  worker.py
.github/workflows/: docker-publish.yml
chart/: .helmignore  Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap-init-scripts.yaml  coordinator-deployment.yaml  coordinator-service.yaml  ingress.yaml  secret.yaml  serviceaccount.yaml  worker-headless-service.yaml  worker-statefulset.yaml
ducklauncher/: __main__.py  cli.py  config.py  models.py
ducklauncher/apps/: coordinator.py  worker.py
ducklauncher/coordinator/: auth.py  events.py  middleware.py  routes.py  scheduler.py
ducklauncher/db/: migrations.sql  notify.py  pool.py  queries.py  sessions.py  sheets.py  users.py
ducklauncher/static/: index.html
ducklauncher/utils/: migrations.sql
ducklauncher/worker/: duckdb.py  registration.py  routes.py
scripts/: run-postgres.sh
tests/: conftest.py  test_auth.py  test_launcer.py
